Fixed logo spacing

--- a/public/css/clean-blog.css
+++ b/public/css/clean-blog.css
@@ -398,4 +398,5 @@ body {
 .vcenter {
   display: inline-block; 
   vertical-align: middle;
+  float: none;
 }
